expected/main/core/bitdata/bitdata19.err
ERROR: "actual/main/core/bitdata/bitdata19.lc", line 1
bitdata Zab/8 = Zab [ Xbad ]            -- invalid, size mismatch
                ^
Sum of component widths is 4 more than expected total

ERROR: Aborting after previously reported error

